--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
     </dependencyManagement>
 
 
-    <!--======================================= Modification is unlikely =========================================-->
+    <!--======================================= Modification is unlikely ==========https://arstechnica.com/civis/viewtopic.php?f=20&t=1430407===============================-->
 
     <!-- Maven 3.6+ -->
 
@@ -94,7 +94,7 @@
         <pluginManagement>
             <plugins>
 
-                <!-- The jar package with all dependency -->
+                <!-- The jar package with all dependency
                 <plugin>
                     <artifactId>maven-assembly-plugin</artifactId>
                     <configuration>
@@ -109,6 +109,7 @@
                         </execution>
                     </executions>
                 </plugin>
+-->
 
                 <!-- This plugin creates libraries and copy dependencies to Package module/ lib folder  -->
                 <!-- https://stackoverflow.com/questions/8310539/
