fix bug and create a company prefix folder structure

--- a/ModuleOne/debianPackage/control
+++ b/ModuleOne/debianPackage/control
@@ -1,4 +1,4 @@
-Package: ${project.artifactId}
+Package: ${company-prefix}${project.artifactId}
 Version: ${project.version}
 Section: base
 Priority: optional
